--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-477.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-215.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 194.156.231.223, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-902.5KB/s(Youtube:不良林), server: 194.156.231.223, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 波兰-1.39MB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇯🇵 日本-961.5KB/s(Youtube:不良林), server: 194.156.231.237, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-477.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-902.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 波兰-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
