--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 波兰-1.39MB/s(Youtube:不良林), server: 217.30.10.67, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇯🇵 日本-961.5KB/s(Youtube:不良林), server: 194.156.231.237, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-700.9KB/s(Youtube:不良林), server: 89.31.126.171, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-384.2KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-213.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇯🇵 日本-467.9KB/s(Youtube:不良林), server: 194.156.231.248, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活8天)香港-4.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 波兰-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-961.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
