--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-700.9KB/s(Youtube:不良林), server: 89.31.126.171, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-384.2KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-213.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇯🇵 日本-467.9KB/s(Youtube:不良林), server: 194.156.231.248, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-303.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 194.156.231.237, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇯🇵 日本-418.9KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-183.6KB/s(Youtube:不良林), server: 5.183.176.84, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 51.81.223.35, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-700.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-384.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-467.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-303.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-183.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
