--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-8.60MB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-170.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-221.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-703.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-956.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇫🇷 法国-601.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-847.6KB/s(Youtube:不良林), server: 89.31.126.31, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-2.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-684.8KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.21MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
+      - 波兰-956.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-601.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-847.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-684.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
